--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
       <button class="Delete">Delete</button>
       <p class="quantity">0</p>
       <h1>Total=<span id="Total">0</span><span>DT</span></h1>
-
-
+</section>
+<section id="images">
       <img src="assetes/pc-portable-asus-x509fa-i3-10e-4g-w10-156hd-grey.jpg" />
       <p id="prix2">1300 </p>
-
+      
       <button class="min-btn">-</button>
       <button class="plus-btn">+</button>
       <button class="Delete">Delete</button>
       <p class="quantity">0</p>
       <h1>Total=<span id="Total">0</span></h1>
-
+    </section>
       <div class="heart-btn">
         <div class="content">
           <span class="heart"></span>
